add paage svager
